<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondologin"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@color/dark_green" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@id/card_view"
        android:padding="28dp">

        <ImageView
            android:layout_width="68dp"
            android:layout_height="52dp"
            android:src="@drawable/fondoquejaexpressblanco" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/quejaexpress"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        android:id="@+id/card_view"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/bienvenido_a_quejaexpress"
                android:textColor="@color/dark_green"
                android:textSize="32sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inicia_sesion_con_tu_informacion"
                android:alpha="0.7"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direccion_de_correo_electronico"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/edtEmail"
                android:drawableEnd="@drawable/baseline_done_24"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrase_a"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtPassword"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/password_icon"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recuerdame"
                    android:layout_centerVertical="true"
                    android:alpha="0.7"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/olvide_mi_contrase_a"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="25dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/button_background"
                android:text="@string/btnIniciar"
                android:textColor="@color/white"
                app:cornerRadius="50dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="O inicia sesion con: "
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <com.google.android.gms.common.SignInButton
                    android:id="@+id/googleSignInButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sign in with Google" />

            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>


